# VoiceVerse-AI

./: .dockerignore  .editorconfig  .env.example  .gitignore  .npmrc  .prettierignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  renovate.json  turbo.json
.github/workflows/: ci.yaml  deploy-database.yaml
apps/api/: Dockerfile  eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json  vitest.config.mts
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
docs/architecture/: system-context.md
docs/deployment/: vercel-supabase.md
docs/design/: milestone-1-dashboard.md
docs/milestones/: 000-foundation.md  001-secure-ingest.md  (+5 more)
services/ai/: Dockerfile  README.md  package.json  pyproject.toml
services/ai/src/voiceverse_ai/: __init__.py  main.py
services/ai/src/voiceverse_ai/api/: health.py  media.py  speech.py  translation.py
services/ai/src/voiceverse_ai/core/: config.py  logging.py  middleware.py  telemetry.py
services/ai/src/voiceverse_ai/media/: __init__.py  errors.py  models.py  service.py  storage.py  tools.py
services/ai/src/voiceverse_ai/speech/: __init__.py  errors.py  models.py  providers.py  service.py
services/ai/src/voiceverse_ai/translation/: __init__.py  errors.py  models.py  providers.py  service.py
services/ai/tests/: test_config.py  test_health.py  test_media_api.py  test_media_service.py  test_media_storage.py  test_media_tools.py  test_speech_execution.py  test_translation_execution.py
(+212 files in other folders)
