[project]
name = "voiceverse-ai-service"
version = "0.0.0"
description = "AI execution plane for VoiceVerse AI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "boto3>=1.40,<2",
  "fastapi>=0.139,<0.140",
  "opentelemetry-api>=1.35,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.35,<2",
  "opentelemetry-instrumentation-fastapi>=0.56b0,<1",
  "opentelemetry-sdk>=1.35,<2",
  "prometheus-client>=0.22,<1",
  "pydantic-settings>=2.10,<3",
  "structlog>=25.4,<26",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "asgi-lifespan>=2.1,<3",
  "httpx>=0.28,<1",
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceverse_ai"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["voiceverse_ai"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ASYNC221", "ASYNC240", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
